--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.14.1",
     "react-toastify": "^9.1.3",
+    "ticket-booking-admin": "file:",
     "yup": "^1.2.0"
   },
   "devDependencies": {
