--- a/package.json
+++ b/package.json
@@ -28,11 +28,15 @@
     "chart.js": "^4.3.0",
     "date-fns": "^2.30.0",
     "formik": "^2.4.2",
+    "i18next": "^23.15.1",
+    "i18next-browser-languagedetector": "^8.0.0",
     "lodash.debounce": "^4.0.8",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.0.2",
+    "react-icons": "^5.3.0",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.14.1",
     "react-toastify": "^9.1.3",
