--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.14.1",
     "react-toastify": "^9.1.3",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "ticket-booking-admin": "file:",
     "yup": "^1.2.0"
   },
