--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^15.0.2",
     "react-icons": "^5.3.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.14.1",
     "react-toastify": "^9.1.3",
