--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "i18next-browser-languagedetector": "^8.0.0",
     "lodash.debounce": "^4.0.8",
     "path": "^0.12.7",
+    "qrcode.react": "^4.1.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
